--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,6 +8,24 @@
     font-weight: bold;
 }
 
+.login-container {
+  display: -webkit-flex;
+  -webkit-flex-direction: column;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #efad62), color-stop(100%, #f7d47c));
+  background: -webkit-linear-gradient(top, #efad62 0%, #f7d47c 100%);
+}
+
+.login-container > .button-row img {
+  max-width: 80%;
+}
+
+.login-container > .header {
+  -webkit-flex: 4;
+  padding-top: 20px;
+}
+
+
 .centered{
     display: block!important;
     margin-right: auto!important;
