--- a/www/lib/ionic/css/ionic.css
+++ b/www/lib/ionic/css/ionic.css
@@ -3215,10 +3215,13 @@ a.subdued {
         line-height: 32px; }
     .bar .button.back-button {
       display: block;
-      margin-right: 5px;
-      padding: 0;
-      white-space: nowrap;
-      font-weight: 400; }
+    color: #ffffff;
+    font-weight: bolder;
+    margin-right: 5px;
+    padding: 0;
+    white-space: nowrap;
+    font-weight: 800;
+  }
     .bar .button.back-button.active, .bar .button.back-button.activated {
       opacity: 0.2; }
   .bar .button-bar > .button, .bar .buttons > .button {
